[project]
name = "python-tm1637"
version = "1.1.3"
description = "Modern, gpiod-based library for TM1637-based LED display modules"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Asadullah Shaikh" }
]
urls = { Repository = "https://github.com/pantheraleo-7/tm1637" }
keywords = ["7", "segment", "led", "display", "raspberry", "pi", "raspberrypi", "rpi", "5"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
requires-python = ">=3.9"
dependencies = [
    "gpiod>=2.3.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tm1637"
